# sgchemist

./: .coveragerc  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_test.txt
.github/workflows/: ci.yml  cicd.yml  release.yml  test.yml
sgchemist/orm/: __init__.py  constant.py  error.py  field.py  meta.py  queryop.py  row.py  serializer.py
sgchemist/schema/: entity.py  generate_entities.py
src/sgchemist/: __init__.py  error.py
src/sgchemist/engine/: __init__.py  mock.py  rest.py  shotgun_api3.py
src/sgchemist/orm/: __init__.py  annotation.py  constant.py  descriptor.py  engine.py  entity.py  error.py  field.py  field_descriptor.py  field_info.py  fields.py  instrumentation.py  mapped_column.py  meta.py  query.py  queryop.py  row.py  serializer.py  session.py  typing_alias.py  typing_util.py
src/sgchemist/schema/: __init__.py  generate.py  generate_entities.py  parse.py
tests/: __init__.py  classes.py  conftest.py
tests/ressources/: test_schema
tests/test_engine/: __init__.py  test_mock.py  test_rest.py
tests/test_orm/: __init__.py  _testmod.py  benchmark.py  classes.py  conftest.py  test_annotation.py  test_engine.py  test_engine_sgapi3.py  test_entity.py  test_field.py  test_instrumentation.py  test_operator.py  test_query.py  test_queryop.py  test_row.py  test_serializer.py  test_session.py  test_typing.py  testmod.py
tests/test_schema/: __init__.py  conftest.py  test_generate_entities.py  test_schema_entity.py
tests/test_schema/ressources/: test_schema.json  test_schema_entity  test_schema_entity.json
