[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "sgchemist"
authors = [
    {name="Paul-Emile Buteau", email="paulemilebuteau@gmail.com"},
]
description = "An ORM for Autodesk Shotgrid"
dependencies = [
    'typing-extensions',
    'requests',
]

[project.optional-dependencies]

test = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "requests-mock",
]
sgapi3 = [
    "shotgun-api3",
]

readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "Shotgrid",
    "Shotgun",
    "Slow Production Tracker",
    "ORM"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PoloB/sgchemist"
Issues = "https://github.com/PoloB/sgchemist/issues"

[project.scripts]
sg2python = "sgchemist.schema.generate_entities:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sgchemist" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "sgchemist.VERSION"}

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests/"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "shotgun_api3.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
lint.select = [
    "ALL",
]
lint.ignore = [
    "S101",  # Use of assert
]
lint.isort.force-single-line = true
lint.pydocstyle.convention = "google"
src = ["src", "tests"]


[tool.coverage]
run.omit = ["tests/*"]
report.exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abc.abstractmethod",
]
